MacViews a11y: Allow VoiceOver to read out views::Label word-by-word.

This requires the label to respond to AXValue, not just AXTitle.
views::Label currently reports nil for its AXValue. Cocoa labels are
just readonly NSTextFields, so they have AXValue.

Fix by sharing more responders used for text fields currently. This
brought in to question the behaviour for secure text fields, which
appears to have changed in macOS. Get the shared code up to speed with
current behavior.

BUG=657945

Review-Url: https://codereview.chromium.org/2934993002
Cr-Commit-Position: refs/heads/master@{#479582}

Former-commit-id: a523016fb1f4607afe920e467b73d2ff6473d5f1