ui/views/controls/textfield/textfield.cc
@@ -926,7 +926,8 @@ void Textfield::GetAccessibleNodeData(ui::AXNodeData* node_data) {
     node_data->AddState(ui::AX_STATE_EDITABLE);
   if (text_input_type_ == ui::TEXT_INPUT_TYPE_PASSWORD) {
     node_data->AddState(ui::AX_STATE_PROTECTED);
-    node_data->SetValue(base::string16(text().size(), '*'));
+    node_data->SetValue(base::string16(
+        text().size(), gfx::RenderText::kPasswordReplacementChar));
   } else {
     node_data->SetValue(text());
   }
